feat: Added doctor endpoint
