# docs/openapi.yaml
@@ -9,13 +9,19 @@ components:
         created_at:
           format: date-time
           type: string
+        doctor_id:
+          type: string
         email:
           type: string
         first_name:
           type: string
+        hospital_id:
+          type: string
         id:
           type: string
         last_name:
+          type: string
+        status:
           type: string
         updated_at:
           format: date-time
@@ -26,6 +32,9 @@ components:
         - last_name
         - age
         - email
+        - status
+        - doctor_id
+        - hospital_id
         - created_at
         - updated_at
       type: object
@@ -68,6 +77,111 @@ components:
           $ref: "#/components/schemas/Account"
       required:
         - account
+      type: object
+    CreateDoctorInputBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://localhost:/schemas/CreateDoctorInputBody.json
+          format: uri
+          readOnly: true
+          type: string
+        account_id:
+          type: string
+      required:
+        - account_id
+      type: object
+    CreateDoctorResponseBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://localhost:/schemas/CreateDoctorResponseBody.json
+          format: uri
+          readOnly: true
+          type: string
+        doctor:
+          $ref: "#/components/schemas/Doctor"
+      required:
+        - doctor
+      type: object
+    CreateDoctorToAccountAssignmentInputBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://localhost:/schemas/CreateDoctorToAccountAssignmentInputBody.json
+          format: uri
+          readOnly: true
+          type: string
+        account_id:
+          type: string
+        doctor_id:
+          type: string
+      required:
+        - account_id
+        - doctor_id
+      type: object
+    CreateDoctorToAccountAssignmentResponseBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://localhost:/schemas/CreateDoctorToAccountAssignmentResponseBody.json
+          format: uri
+          readOnly: true
+          type: string
+        assignment:
+          $ref: "#/components/schemas/DoctorAssignment"
+      required:
+        - assignment
+      type: object
+    Doctor:
+      additionalProperties: false
+      properties:
+        account_id:
+          type: string
+        created_at:
+          format: date-time
+          type: string
+        id:
+          type: string
+        status:
+          type: string
+      required:
+        - id
+        - account_id
+        - status
+        - created_at
+      type: object
+    DoctorAssignment:
+      additionalProperties: false
+      properties:
+        account_id:
+          type: string
+        doctor_id:
+          type: string
+        id:
+          type: string
+        valid_from:
+          format: date-time
+          type: string
+        valid_to:
+          format: date-time
+          type:
+            - string
+            - "null"
+      required:
+        - id
+        - account_id
+        - doctor_id
+        - valid_from
+        - valid_to
       type: object
     ErrorDetail:
       additionalProperties: false
@@ -261,13 +375,34 @@ paths:
       summary: /api/v1/accounts - [POST]
       tags:
         - accounts
-  /api/v1/accounts/{id}:
+  /api/v1/accounts/{accountID}:
+    delete:
+      description: Archives an existing account
+      operationId: archive-account
+      parameters:
+        - in: path
+          name: accountID
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: /api/v1/accounts/{accountID} - [DELETE]
+      tags:
+        - accounts
     get:
       description: Gets an account by its ID
       operationId: get-account
       parameters:
         - in: path
-          name: id
+          name: accountID
           required: true
           schema:
             type: string
@@ -284,7 +419,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
-      summary: /api/v1/accounts/{id} - [GET]
+      summary: /api/v1/accounts/{accountID} - [GET]
       tags:
         - accounts
     put:
@@ -292,7 +427,7 @@ paths:
       operationId: update-account
       parameters:
         - in: path
-          name: id
+          name: accountID
           required: true
           schema:
             type: string
@@ -311,9 +446,61 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
-      summary: /api/v1/accounts/{id} - [PUT]
+      summary: /api/v1/accounts/{accountID} - [PUT]
       tags:
         - accounts
+  /api/v1/doctors:
+    post:
+      description: Creates a new doctor
+      operationId: create-doctor
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateDoctorInputBody"
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateDoctorResponseBody"
+          description: Created
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: /api/v1/doctors - [POST]
+      tags:
+        - doctors
+  /api/v1/doctors/assignments:
+    post:
+      description: Assigns a doctor to an account
+      operationId: create-doctor-to-account-assignment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateDoctorToAccountAssignmentInputBody"
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateDoctorToAccountAssignmentResponseBody"
+          description: Created
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: /api/v1/doctors/assignments - [POST]
+      tags:
+        - doctors
   /api/v1/healthcheck:
     get:
       description: Checks if the service is healthy
